--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,9 @@
             "sizes": "512x512 192x192 72x72"
         },
         {
-            "src": "coffee-icon.png",
+            "src": "calendar.png",
             "type": "image/png",
-            "sizes": "144x144"
+            "sizes": "128x128"
         }
     ]
 }
