--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "Free Weather App",
     "short_name": "WeMap",
+    "scope": ".",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#00A5CF",
