--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Free Weather App",
     "short_name": "WeMap",
-    "scope": ".",
-    "start_url": ".",
+    "scope": "/",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#00A5CF",
     "theme_color": "#ED217C",
